# bitch_bot

./: Cargo.toml
.github/workflows/: rust.yml
src/: deepinfra.rs  main.rs  prompt.txt
